[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-drug-safety-review-platform"
version = "0.1.0"
description = "Synthetic, human-in-the-loop LLM-assisted pharmacovigilance review platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Fellowship Portfolio Candidate"}]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "streamlit>=1.38,<2.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-dotenv>=1.0,<2.0",
  "scikit-learn>=1.5,<2.0",
  "numpy>=1.26,<3.0",
  "requests>=2.32,<3.0",
]

[project.optional-dependencies]
llm = ["openai>=1.40,<3.0"]
dev = ["pytest>=8.3,<10.0", "httpx>=0.27,<1.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
